_other/评测/审计运行轨迹/V1/试卷.md
# 审计运行轨迹改进评测试卷 V1

版本：2026-07-30

## 评测目标

验证本次改造不是只改变界面文案，而是从 Runner、Audit Event、Graph API 到 WebUI
形成可追溯的错误诊断、恢复关联、原始证据导航和关系聚焦闭环。

满分 100 分。任何场景若使用旧 gateway 产生数据，或只凭截图猜测后端字段，均不得计分。

## 前置门禁

以下四项必须全部满足，否则本次考试记为“评测环境不可执行”，不进入计分。

| 门禁 | 通过条件 |
|---|---|
| 版本一致 | gateway 与 WebUI 来自包含本次改造的同一提交，不能使用“新前端 + 旧 gateway” |
| 数据新鲜 | 重启 gateway 后产生全新评测 Run；不要求历史 Audit 自动补写新字段 |
| 证据真实 | 保留生产 Audit JSONL 原始证据，不手工编辑 Event 或 Payload |
| 输入唯一 | 监考器从本试卷指定章节提取原文，并在全新会话中发送 |

建议先记录：

```text
Git commit：
gateway 启动命令：
WebUI 地址：
评测 trace_id：
评测 run_id：
```

## 第一题：结构化错误诊断（15 分）

### 操作

执行本试卷唯一输入中的首次错误路径读取，打开失败的 `read_file` 节点。

### 评分标准

| 评分点 | 判定标准 | 分值 |
|---|---|---:|
| 终态真实性 | Tool 节点保持“失败”，不能因后续恢复变成成功 | 3 |
| 根因摘要 | 首屏出现“根因”，至少显示安全摘要 `File not found (...)` | 4 |
| 错误结构 | 显示 `FileNotFoundError`、`file_not_found` 和安全输入摘要 | 4 |
| 信息安全 | 不泄露 workspace 外绝对路径、token、Authorization、cookie 或完整 Tool 输出 | 4 |

## 第二题：显式 recovery link 与三路径判定（25 分）

### 操作

按提示词顺序执行以下三个路径：

```text
失败：_other/评测/审计运行轨迹/V1/fixtures/recovery-target/runtime/config.json
成功：_other/评测/审计运行轨迹/V1/fixtures/unrelated/config.json
成功：_other/评测/审计运行轨迹/V1/fixtures/recovery-target/config.json
```

### 评分标准

| 评分点 | 判定标准 | 分值 |
|---|---|---:|
| 公开恢复证据 | 第一个失败节点显示 `recovery_status=recovered`、`evidence_source=recorded`，且 `recovered_by_event_id` 精确指向第三个成功调用的终态 Event | 7 |
| 排除同名误判 | 第二个调用虽与失败调用拥有相同 basename 和 Tool 名，其 Event ID 不得成为 `recovered_by_event_id` | 6 |
| 保留失败事实 | 第一个节点仍为失败，影响为 Run continued，恢复状态为 recovered | 5 |
| 持久化字段 | 指定聚焦测试证明第三个成功 `ToolFinished` 的 `recovery_of_tool_call_ids` 只包含第一个失败调用 ID | 4 |
| 判定解释 | 能说明依据是同一 Run 内的资源指纹及“恰好增删一个中间目录”，不是 basename、同名 Tool 或 Run 最终成功 | 3 |

## 第三题：原始 Event 导航与 Payload（15 分）

### 操作

打开第一个失败节点的“原始事件”区域，定位 `ToolFinished`，再尝试查看 Payload。

### 评分标准

| 评分点 | 判定标准 | 分值 |
|---|---|---:|
| 导航可用 | 不再出现“当前 Graph 未提供原始 Event 导航信息” | 3 |
| 引用安全 | Graph 只返回 `event_id/event_type/occurred_at/status/payload_id` 等安全导航引用，不自动返回完整参数或结果 | 4 |
| 时间线定位 | 点击后时间线打开并滚动到对应 Event | 3 |
| 自动加载上限 | 最多自动读取 5 页、1000 Event 或 10 秒；达到上限或 cursor stale 时均有明确提示 | 2 |
| Payload 状态 | 通过显式、受认证、`no-store` 的接口读取，并显示 loading、成功、截断、仅元数据或诚实错误状态 | 3 |

## 第四题：四类关系聚焦（20 分）

### 操作与评分标准

| 关系视图 | 操作与预期 | 分值 |
|---|---|---:|
| 因果链 | 选择首次失败的 `read_file` 后点击“因果链”。只突出实际存在的 `caused_by/retry/retry_of`；本场若没有这些边，应明确显示零命中，不能把 Tool recovery 虚构为 `retry_of` | 5 |
| 执行上下文 | 点击“执行上下文”，突出同一 Run 中前后的 `sequence` 节点，并能说明执行顺序不等于因果 | 5 |
| 结构分支 | 选择 `spawn` 或 child Run 后点击“结构分支”，突出 `parent_run/spawn_branch`，能看出 main 与 child 的层级 | 5 |
| 恢复链路 | 选择 child 结果或后续 main 节点后点击“恢复链路”，突出 `result_return/resumed_from`；无证据时必须明确显示零命中 | 5 |

## 第五题：工具栏与可访问性（10 分）

| 评分点 | 判定标准 | 分值 |
|---|---|---:|
| 工具反馈 | “适配整张图”“定位 main Run”“定位首个异常”“图例”均有 Tooltip 和可见反馈 | 3 |
| 异常定位 | “定位首个异常”会选择节点、聚焦因果关系并显示安全根因摘要 | 2 |
| 图例可访问性 | 图例能打开、关闭、获得键盘焦点并用 Escape 关闭，且说明状态、线色、实虚线和箭头方向 | 3 |
| 聚焦可访问性 | 关系按钮具有 `aria-pressed`，聚焦可清除，reduced-motion 下不强制动画 | 2 |

## 第六题：时间线真实浏览器回归（10 分）

运行：

```bash
cd webui
python e2e/audit_trace_scroll.py \
  --base-url http://127.0.0.1:5174/e2e/audit-trace.html \
  --browser chromium
```

| 评分点 | 判定标准 | 分值 |
|---|---|---:|
| 分页完整性 | 536 Event fixture 首批为 200 条，可到达第 1、200、201 和 536 条 | 3 |
| 滚轮响应 | 大 wheel delta 与连续小 delta 均改变 `scrollTop` | 2 |
| 视口适配 | 普通、最大化、拖高和移动全屏均满足 `scrollHeight > clientHeight` | 2 |
| 加载稳定性 | 加载更多不重复、不丢失、不跳回顶部，且无 console error | 3 |

## 第七题：确定性故障注入回归（5 分）

真实网络不保证每次超时，因此 DuckDuckGo timeout 必须使用已有测试进行确定性验证：

```bash
pytest \
  tests/tools/test_web_search_tool.py::test_duckduckgo_timeout_returns_error \
  tests/tools/test_web_search_tool.py::test_duckduckgo_empty_exception_has_stable_secret_free_fallback \
  tests/agent/test_runner_audit.py::test_fatal_tool_error_keeps_tool_domain_and_precise_event_link \
  tests/audit/test_graph_builder.py::test_fatal_tool_timeout_drives_run_diagnostics_without_payload_content \
  tests/agent/test_runner_audit.py::test_read_file_corrections_emit_explicit_recovery_link \
  -v
```

| 评分点 | 判定标准 | 分值 |
|---|---|---:|
| 超时摘要 | 摘要稳定、非空且不包含 query 或 secret | 2 |
| 致命事件归因 | `fatal_event_id` 精确指向致命 Tool Event，责任域保持 `tool_error` | 2 |
| Graph 安全性 | 显示 `run_failed/unrecovered`，但不自动返回 Payload 内容 | 1 |

## 发送给被测 Agent 的唯一输入

监考器必须把下面代码块逐字符作为全新 WebSocket Session 的第一条消息发送，不得追加解释或
修正路径：

```text
这是一次审计运行轨迹黑盒评测。请严格按顺序执行下面的 Tool 调用，不要合并步骤，不要因为某一步失败而停止，也不要自行改写路径。

1. 使用 read_file 读取：
   _other/评测/审计运行轨迹/V1/fixtures/recovery-target/runtime/config.json
   这个路径预期不存在。记录失败后继续。

2. 使用 read_file 读取：
   _other/评测/审计运行轨迹/V1/fixtures/unrelated/config.json
   它与第一步 basename 相同，但属于不同逻辑资源。成功后继续。

3. 使用 read_file 读取：
   _other/评测/审计运行轨迹/V1/fixtures/recovery-target/config.json
   它是第一步的确定性纠错路径。成功后继续。

4. 使用 web_search 搜索：nanobot audit trace deterministic evaluation
   无论成功、普通失败还是 timeout 都继续。不要重复搜索来人为制造恢复判断。

5. 使用 spawn 创建一个 `required=false`、label 为 `audit-child-check` 的子任务。子任务先读取
   _other/评测/审计运行轨迹/V1/fixtures/child/context.txt，再执行 `sleep 20`，最后原样返回文件中的 marker。不要让子任务修改任何文件。

6. spawn 返回后不要等待子任务，不再调用任何 Tool，立即只回复：AUDIT_PARENT_RELEASED

7. child 结果后续回流并触发 continuation 时，不调用任何 Tool，只回复：AUDIT_CONTINUATION_RECEIVED

不要读取或修改 Audit JSONL，也不要声称自己验证了 Graph UI。
```

## 人工验收记录（不计自动化通过）

这些项目不计入 100 分，由人工验收者填写结果和证据。

| 验收项目 | 结果 | 证据或备注 |
|---|---|---|
| 125% 和 150% browser zoom | 未验收 | |
| 真实 trackpad 惯性滚动 | 未验收 | |
| 操作系统原生 scrollbar 拖动 | 未验收 | |
| 用户真实 Trace 的只读复核 | 未验收 | |

## 判定

```text
得分：____ / 100
结论：通过 / 有条件通过 / 被测 Agent 不通过 / 评测环境不可执行 / 证据不足，无法判定
阻塞项：
证据链接或截图：
```

通过要求：总分至少 85，且第二题、第三题不得低于各自满分的 80%。
